--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
 .App {
+  border-left: 4px solid #ffffff;
+  border-right: 4px solid #ffffff;
+  color: #ffffff;
+  display: block;
+  font-family: "Roboto Mono", monospace;
+  margin: 40px auto;
+  max-width: 60%;
+  padding-left: 15px;
+  padding-right: 15px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App hr {
+  background: #ffffff;
+  border-radius: 3px;
+  border-style: solid;
+  color: #ffffff;
+  height: 2px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .col-sm {
+  padding-bottom: 20px;
 }
